--- a/.github/workflows/doc-fix.yml
+++ b/.github/workflows/doc-fix.yml
@@ -19,5 +19,6 @@ jobs:
         uses: actions/configure-pages@v5
       - name: Build Graphbook Docs
         run: |
+          pip install -r requirements.txt
           pip install -r docs/requirements.txt
           make -C docs html
