--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -34,6 +34,7 @@ jobs:
         uses: actions/configure-pages@v5
       - name: Build Graphbook Docs
         run: |
+          pip install -r requirements.txt
           pip install -r docs/requirements.txt
           make -C docs html
       - name: Upload artifact
