--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,13 @@
 name: Docker Build
 
 on:
-    push:
+  push:
+    branches: ["main"]
 
 jobs:
   docker:
     runs-on:
-        group: larger-runners
+      group: larger-runners
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -14,11 +15,11 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-            username: ${{ secrets.DOCKERHUB_USERNAME }}
-            password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
-            push: true
-            tags: rsamf/graphbook:latest
+          push: true
+          tags: rsamf/graphbook:latest
