--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -1,4 +1,4 @@
-name: Publish Graphbook to Test PyPI
+name: Publish Graphbook to PyPI
 
 on:
   workflow_dispatch:
@@ -18,9 +18,6 @@ jobs:
       - name: Poetry Install
         run: |
           poetry install
-      - name: Set up Test PyPI Repository
-        run: |
-          poetry config repositories.test-pypi https://test.pypi.org/legacy/
       - name: Build and Publish
         run: |
-          poetry publish --build -r test-pypi -u ${{ secrets.PYPI_USERNAME }} -p ${{ secrets.TEST_PYPI_PASSWORD }}
+          poetry publish --build -u ${{ secrets.PYPI_USERNAME }} -p ${{ secrets.PYPI_PASSWORD }}
