making and packaging web files

--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -20,4 +20,5 @@ jobs:
           poetry install
       - name: Build and Publish
         run: |
+          make web
           poetry publish --build -u ${{ secrets.PYPI_USERNAME }} -p ${{ secrets.PYPI_PASSWORD }}
