--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -3,7 +3,7 @@ name: Deploy Graphbook Docs
 
 on:
   push:
-    branches: ["main"]
+    branches: ["main", "pipeline-fix"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -32,11 +32,16 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v5
+      - name: Install poetry
+        run: pipx install poetry
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+          cache: 'poetry'
       - name: Build Graphbook Docs
         run: |
-          pip install -r requirements.txt
-          pip install -r docs/requirements.txt
-          make -C docs html
+          poetry install --with dev
+          make docs
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
