--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -40,6 +40,7 @@ jobs:
           cache: 'poetry'
       - name: Build Graphbook Docs
         run: |
+          apt-get install python3-sphinx -y
           poetry install --with dev
           make docs
       - name: Upload artifact
