--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -3,7 +3,7 @@ name: Deploy Graphbook Docs
 
 on:
   push:
-    branches: ["main"]
+    branches: ["main", "pipeline-fix"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -40,7 +40,7 @@ jobs:
           cache: 'poetry'
       - name: Build Graphbook Docs
         run: |
-          apt-get install python3-sphinx -y
+          sudo apt-get install python3-sphinx -y
           poetry install --with dev
           make docs
       - name: Upload artifact
