--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -40,9 +40,8 @@ jobs:
           cache: 'poetry'
       - name: Build Graphbook Docs
         run: |
-          sudo apt-get install python3-sphinx -y
           poetry install --with dev
-          make docs
+          poetry run make docs
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
