--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -42,7 +42,7 @@ jobs:
         run: |
           apt-get install python3-sphinx -y
           poetry install --with dev
-          make docs
+          poetry run make docs
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
