--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "antd": "^5.15.4",
     "codemirror": "^6.0.1",
     "js-md5": "^0.8.3",
+    "re-resizable": "^6.9.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reactflow": "^11.11.3"
