--- a/web/package.json
+++ b/web/package.json
@@ -21,7 +21,8 @@
     "re-resizable": "^6.9.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "reactflow": "^11.11.3"
+    "reactflow": "^11.11.3",
+    "reaviz": "^15.18.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
