--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ sphinxcontrib-jquery = "^4.1"
 sphinxcontrib-jsmath = "^1.0.1"
 sphinxcontrib-qthelp = "^1.0.7"
 sphinxcontrib-serializinghtml = "^1.1.10"
+pytest-asyncio = "^0.23.8"
 
 [tool.poetry.group.examples]
 optional = true
