--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
     "re-resizable": "^6.9.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "reactflow": "^11.11.3",
     "reaviz": "^15.18.3"
   },
