--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ python-magic = "^0.4.27"
 watchdog = "^4.0.0"
 torchvision = "^0.18.1"
 psutil = "^6.0.0"
+pyyaml = "^6.0.2"
 
 [tool.poetry.group.dev]
 optional = true
