--- a/example_extension/web/package.json
+++ b/example_extension/web/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js --mode development"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +17,8 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "react": "^18.3.1"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0"
   }
 }
