--- a/example_extension/web/package.json
+++ b/example_extension/web/package.json
@@ -16,9 +16,8 @@
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
   },
-  "dependencies": {
-  },
   "peerDependencies": {
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "reactflow": "^11.11.3"
   }
 }
