--- a/example_plugin/pyproject.toml
+++ b/example_plugin/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "example_extension"
+name = "example_plugin"
 version = "0.0.0"
 dependencies = [
 ]
