--- a/example_plugin/web/package.json
+++ b/example_plugin/web/package.json
@@ -17,6 +17,7 @@
     "webpack-cli": "^5.1.4"
   },
   "peerDependencies": {
+    "antd": "^5.20.6",
     "react": "^18.2.0",
     "reactflow": "^11.11.3"
   }
