--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,6 @@ optional = true
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
-sphinx-rtd-theme = "^2.0.0"
 sphinxcontrib-applehelp = "^1.0.8"
 sphinxcontrib-devhelp = "^1.0.6"
 sphinxcontrib-htmlhelp = "^2.0.5"
@@ -47,3 +46,6 @@ sphinxcontrib-jsmath = "^1.0.1"
 sphinxcontrib-qthelp = "^1.0.7"
 sphinxcontrib-serializinghtml = "^1.1.10"
 pytest-asyncio = "^0.23.8"
+sphinx-sitemap = "^2.6.0"
+sphinxawesome-theme = "^5.2.0"
+sphinx-design = "^0.6.1"
