--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,10 +24,8 @@ graphbook = "graphbook.main:main"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-torch = "^2.3.1"
 aiohttp = "^3.9.4"
 pillow = "^10.3.0"
-python-magic = "^0.4.27"
 watchdog = "^4.0.0"
 torchvision = "^0.18.1"
 psutil = "^6.0.0"
@@ -49,3 +47,6 @@ pytest-asyncio = "^0.23.8"
 sphinx-sitemap = "^2.6.0"
 sphinxawesome-theme = "^5.2.0"
 sphinx-design = "^0.6.1"
+
+[tool.poetry.group.peer.dependencies]
+torch = "^2.0.0"
