--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -36,11 +36,11 @@ jobs:
         run: pipx install poetry
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: '3.10'
           cache: 'poetry'
       - name: Build Graphbook Docs
         run: |
-          poetry install --with dev
+          poetry install --with dev --with peer
           poetry run make docs
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
