Caching; Copying README.md into image before install

--- a/.github/workflows/build-debug.yml
+++ b/.github/workflows/build-debug.yml
@@ -23,4 +23,6 @@ jobs:
         with:
           push: true
           tags: rsamf/graphbook:debug
+          cache-from: type=registry,ref=rsamf/graphbook:debug
+          cache-to: type=inline
 
