--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,9 @@ name: Docker Build
 on:
   push:
     branches: ["main"]
+    paths-ignore:
+        - 'docs/**'
+        - 'tests/**'
 
 jobs:
   docker:
