--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -4,6 +4,9 @@ name: Deploy Graphbook Docs
 on:
   push:
     branches: ["main"]
+    paths:
+      - 'docs/**'
+      - 'graphbook/**'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
