--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
     "@codemirror/lang-python": "^6.1.5",
     "@microlink/react-json-view": "^1.23.1",
     "@uiw/codemirror-theme-basic": "^4.21.25",
