--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,9 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "graphbook"
-version = "0.9.2"
+version = "0.9.3"
 authors = ["Richard Franklin <rsamf@graphbook.ai>"]
-description = "An extensible ML workflow framework built for data scientists and ML engineers."
+description = "The AI-drive data pipeline and workflow framework for data scientists and machine learning engineers."
 keywords = ["ml", "workflow", "framework", "pytorch", "data science", "machine learning", "ai"]
 readme = "README.md"
 classifiers = [
