--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,13 +2,15 @@ name: Docker Build
 
 on:
   push:
-    branches: ["main"]
-    paths-ignore:
-        - 'docs/**'
-        - 'tests/**'
+    tags:
+      - "v*"
+
+env:
+  DOCKER_TAG_LATEST: rsamf/graphbook:latest
+  DOCKER_TAG: rsamf/graphbook:${{ github.ref_name }}
 
 jobs:
-  docker:
+  base:
     runs-on:
       group: larger-runners
     steps:
@@ -25,6 +27,30 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: rsamf/graphbook:latest
-          cache-from: type=registry,ref=rsamf/graphbook:latest
+          file: ./docker/Dockerfile
+          tags: $DOCKER_TAG_LATEST, $DOCKER_TAG
+          cache-from: type=registry,ref=$DOCKER_TAG_LATEST
+          cache-to: type=inline
+
+  hfspace:
+    needs: base        
+    runs-on:
+      group: larger-runners
+    steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+ 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+ 
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          file: ./docker/Dockerfile.hfspace
+          tags: ${DOCKER_TAG}-space
+          cache-from: type=registry,ref=${DOCKER_TAG}-space
           cache-to: type=inline
