--- a/docker/Dockerfile.hfspace
+++ b/docker/Dockerfile.hfspace
@@ -2,4 +2,4 @@ FROM rsamf/graphbook:latest
 
 RUN chown -R 1000:1000 .
 
-CMD ["python", "-m", "graphbook.main", "--isolate-users"] 
+CMD ["python", "-m", "graphbook.main", "--isolate_users", "--no_sample"] 
