--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,6 @@ jobs:
           images: |
             rsamf/graphbook
           tags: |
-            type=ref,event=tag
             type=semver,pattern={{version}}
             type=sha
 
@@ -52,10 +51,10 @@ jobs:
         with:
           flavor: |
             suffix=-space
+            latest=false
           images: |
             rsamf/graphbook
           tags: |
-            type=ref,event=tag
             type=semver,pattern={{version}}
             type=sha
 
