--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,8 +5,26 @@ on:
   pull_request:
 
 jobs:
+  build-web:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '20'
+          cache: npm
+      - name: Build Web
+        run: |
+          make web
+      - name: Upload Web Build
+        uses: actions/upload-artifact@v4
+        with:
+          name: web_dir
+          path: web/dist
   tests:
     runs-on: ubuntu-latest
+    needs: [build-web]
     steps:
       - uses: actions/checkout@v4
       - name: Install poetry
@@ -20,6 +38,10 @@ jobs:
       - name: Install dependencies
         run: |
           poetry install --with dev
+      - name: Download Web Build
+        uses: actions/download-artifact@v4
+        with:
+          name: web_dir
       - name: Run tests
         run: |
           poetry run pytest
