--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           node-version: '20'
           cache: npm
+          cache-dependency-path: web/package-lock.json
       - name: Build Web
         run: |
           make web
