--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ pillow = "^10.3.0"
 watchdog = "^4.0.0"
 psutil = "^6.0.0"
 pyyaml = "^6.0.2"
+pyarrow = "^19.0.0"
 
 [tool.poetry.group.dev]
 optional = true
