--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,6 +22,7 @@ jobs:
         with:
           name: web_dir
           path: web/dist
+          retention-days: 1
   tests:
     runs-on: ubuntu-latest
     needs: [build-web]
@@ -50,3 +51,9 @@ jobs:
       - name: Run tests
         run: |
           poetry run pytest
+      - name: Upload test outputs
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: tests/outputs
+          retention-days: 1
