--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -52,6 +52,7 @@ jobs:
         run: |
           poetry run pytest
       - name: Upload test outputs
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: test-results
