--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -50,7 +50,7 @@ jobs:
           echo "Downloaded web build to ${{ steps.download.outputs.download-path }}"
       - name: Run tests
         run: |
-          poetry run pytest
+          poetry run pytest -s | tee -a tests/outputs/tests.log
       - name: Upload test outputs
         if: always()
         uses: actions/upload-artifact@v4
