--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "graphbook"
-version = "0.11.1"
+version = "0.11.2"
 authors = ["Richard Franklin <rsamf@graphbook.ai>"]
 description = "The AI-driven data pipeline and workflow framework for data scientists and machine learning engineers."
 keywords = ["ml", "workflow", "framework", "pytorch", "data science", "machine learning", "ai"]
@@ -18,20 +18,26 @@ license = "MIT"
 homepage = "https://graphbook.ai"
 documentation = "https://docs.graphbook.ai"
 repository = "https://github.com/graphbookai/graphbook"
+packages = [
+    { include = "*", from = "graphbook/core", to = "graphbook" },
+    { include = "graphbook/logging" },
+    { include = "graphbook/ray" }
+]
 
 [tool.poetry.scripts]
 graphbook = "graphbook.main:main"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-torch = "^2.0.0"
-torchvision = "^0.18.1"
 aiohttp = "^3.9.4"
 pillow = "^10.3.0"
 watchdog = "^4.0.0"
 psutil = "^6.0.0"
 pyyaml = "^6.0.2"
-pyarrow = "^19.0.0"
+ray = { version = "^2.41.0", optional = true }
+torch = { version = "^2.0.0", optional = true }
+torchvision = { version = "^0.18.1", optional = true }
+pyarrow = { version = "^19.0.0", optional = true }
 
 [tool.poetry.group.dev]
 optional = true
@@ -57,3 +63,10 @@ optional = true
 
 [tool.poetry.group.peer.dependencies]
 ray = "^2.41.0"
+torch = "^2.0.0"
+torchvision = "^0.18.1"
+pyarrow = "^19.0.0"
+
+[tool.poetry.extras]
+ray = ["ray"]
+logging = ["torch", "torchvision", "pyarrow"]
