Adjustments for circular deps

--- a/.gitignore
+++ b/.gitignore
@@ -21,10 +21,13 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Build and dependencies
 node_modules
 dist
 dist-ssr
 *.local
+/graphbook/web
+
 
 # Editor directories and files
 .vscode/*
