--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,8 @@ psutil = "^6.0.0"
 pyyaml = "^6.0.2"
 ray = { version = "^2.41.0", optional = true }
 pyarrow = { version = "^19.0.0", optional = true }
+cloudpickle = "^3.1.1"
+msgpack = "^1.1.0"
 
 [tool.poetry.group.dev]
 optional = true
