--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,14 +23,15 @@ repository = "https://github.com/graphbookai/graphbook"
 graphbook = "graphbook.core.cli:main"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.10"
 aiohttp = "^3.9.4"
 pillow = "^10.3.0"
 watchdog = "^4.0.0"
 psutil = "^6.0.0"
 pyyaml = "^6.0.2"
 ray = { version = "^2.41.0", optional = true }
-pyarrow = { version = "^19.0.0", optional = true }
+cloudpickle = "^3.1.1"
+msgpack = "^1.1.0"
 
 [tool.poetry.group.dev]
 optional = true
@@ -56,10 +57,10 @@ optional = true
 
 [tool.poetry.group.peer.dependencies]
 ray = "^2.41.0"
-pyarrow = "^19.0.0"
 torch = "^2.0.0"
 torchvision = "^0.18.1"
+s3fs = "^2024.4.0"
 
 [tool.poetry.extras]
 ray = ["ray"]
-logging = ["pyarrow"]
+logging = []
