--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,8 @@ pyyaml = "^6.0.2"
 ray = { version = "^2.41.0", optional = true }
 cloudpickle = "^3.1.1"
 msgpack = "^1.1.0"
+ipykernel = "^6.29.5"
+firecrawl-py = "^1.15.0"
 
 [tool.poetry.group.dev]
 optional = true
@@ -51,6 +53,7 @@ sphinxawesome-theme = "^5.2.0"
 sphinx-design = "^0.6.1"
 selenium = "^4.28.1"
 webdriver-manager = "^4.0.2"
+ipykernel = "^6.29.5"
 
 [tool.poetry.group.peer]
 optional = true
