--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -4,6 +4,7 @@ name: Deploy Graphbook Docs
 on:
   push:
     branches: ["main"]
+    tags: ["v*"]
     paths:
       - 'docs/**'
       - 'graphbook/**'
