--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -3,11 +3,8 @@ name: Deploy Graphbook Docs
 
 on:
   push:
-    branches: ["main"]
-    tags: ["v*"]
-    paths:
-      - 'docs/**'
-      - 'graphbook/**'
+    tags:
+      - "v*"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
